@@ -1,24 +1,28 @@
 package com.dev.springsecuritydemo.models.message;
 
+import org.springframework.stereotype.Component;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Component
 public class MessageMapper {
-    public static MessageDTO toDTO(Message message) {
-        return new MessageDTO(message.getSenderId(), message.getReceiverId(), message.getText(), message.getDate(), message.getIsRead(),message.getMessageId());
+
+    public MessageDTO toDTO(Message message) {
+        return new MessageDTO(
+                message.getSenderId(),
+                message.getReceiverId(),
+                message.getText(),
+                message.getDate(),
+                message.getIsRead(),
+                message.getMessageId()
+        );
     }
 
-    public static List<MessageDTO> toDTOList(List<Message> messages) {
-        return messages.stream().map(MessageMapper::toDTO).toList();
+    public List<MessageDTO> toDTOList(List<Message> messages) {
+        return messages.stream()
+                .map(this::toDTO)
+                .collect(Collectors.toList());
     }
-
-//    public static Message toEntity(MessageDTO dto) {
-//        return Message.builder()
-//                .senderId(dto.senderId())
-//                .receiverId(dto.receiverId())
-//                .text(dto.text())
-//                .date(dto.date())
-//                .isRead(dto.isRead())
-//                .messageId(dto.messageId())
-//                .build();
-//    }
 }
+
